<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Registration_and_Modification"
        android:id="@+id/textView14"
        android:background="@color/orange"
        android:autoText="false"
        android:editable="false"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Item_Code"
            android:id="@+id/textView8" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_weight="0.96" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Enter_Bu"
            android:text="@string/Enter"
            android:onClick="onClick_EnterButton" />

    </LinearLayout>

    <TextView
        android:layout_width="362dp"
        android:layout_height="3dp"
        android:text="直線"
        android:id="@+id/textView9"
        android:background="#ff000000"
        android:textColor="#ff000000"
        android:clickable="false"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:layout_weight="0.04"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Item_Name"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/ItemName_EditText"
            android:text="@string/Sample"
            android:gravity="right"
            android:layout_weight="0.81"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:measureWithLargestChild="false"
        android:layout_weight="0.37">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Price"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/Price_EditText"
            android:text="0"
            android:gravity="right"
            android:layout_weight="4.25"
            android:selectAllOnFocus="true"
            android:autoText="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Currency_Unit"
            android:id="@+id/textView2" />

        <RadioGroup
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/PriceTypeGroup_RadioGroup"
            android:measureWithLargestChild="false">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Price_with_Tax_Short"
                android:id="@+id/PriceWithTax_RadioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Price_without_Tax_Short"
                android:id="@+id/PriceWithoutTax_RadioButton"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TaxFreePrice_Short"
                android:id="@+id/TaxFree_RadioButton" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:weightSum="1"
        android:gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Tax"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/Tax_TextView"
            android:layout_weight="0.20"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Currency_Unit"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="("
            android:id="@+id/textView13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rate_of_tax"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/TaxPercent_EditText"
            android:layout_weight="0.18"
            android:text="8.0"
            android:selectAllOnFocus="true"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="％)"
            android:id="@+id/textView7" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="→"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Price_with_Tax"
            android:id="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/AmountPrice_Te"
            android:layout_weight="0.28"
            android:textColor="@color/red"
            android:textSize="30dp"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Currency_Unit"
            android:id="@+id/textView12" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/Cancel_Bu" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Final_Answer"
            android:id="@+id/button" />
    </LinearLayout>

</LinearLayout>