<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:id="@+id/activity_my">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ItemTops"
        android:layout_gravity="center_horizontal|top">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Representative"
            android:id="@+id/Representative_Bu" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YYYYMMDD HH:MM"
            android:id="@+id/Day_Bu"
            android:layout_gravity="right|top" />
    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Using_Li"
        android:layout_gravity="center_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:id="@+id/All_Clear_Bu"
            android:layout_weight="1"
            android:clickable="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Manual_Input"
            android:id="@+id/Manual_Input_Bu"
            android:layout_weight="1"/>

        <Button
            android:layout_width="111dp"
            android:layout_height="60dp"
            android:text="小計"
            android:id="@+id/Subtotal_Bu"
            android:layout_weight="2"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fillViewport="false">

    </ScrollView>

</FrameLayout>
